<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="label_project_submission">Project Submission</string>
    <string name="label_submission_failed">Submission not Successful</string>
    <string name="label_submission_successful">Submission Successful</string>
    <string name="submit_button">Submit</string>
    <string name="project_on_github_link">Project On GITHUB(link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">Question Mark</string>
    <string name="yes_label">Yes</string>
    <string name="back_button">Back Button</string>
    <string name="leader_banner">Leader Banner</string>
    <string name="label_loading">Loading...</string>
    <string name="msg_no_record">No record available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>