<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="clearForm"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainbg"
        tools:context=".SubmitActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/colorPrimaryDark1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="?actionBarSize"
            android:layout_marginEnd="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:srcCompat="@drawable/gads_header" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_project_submission"
            android:textColor="@color/colorPrimaryDark1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="185dp"
            android:layout_height="@dimen/dimens_44"
            android:layout_marginTop="116dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/lastName"
            android:paddingStart="@dimen/dimens_16"
            android:paddingEnd="@dimen/dimens_16"
            android:textColorHint="@color/colorHintText"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="@{clearForm?View.GONE:View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="185dp"
            android:layout_height="@dimen/dimens_44"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/emailAddress"
            android:paddingStart="@dimen/dimens_16"
            android:paddingEnd="@dimen/dimens_16"
            android:textColorHint="@color/colorHintText"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="@{clearForm?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/firstName" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens_44"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/dimens_16"
            android:paddingEnd="@dimen/dimens_16"
            android:textColorHint="@color/colorHintText"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="@{clearForm?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/projectLink"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens_44"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_bg"
            android:hint="@string/project_on_github_link"
            android:importantForAutofill="no"
            android:inputType="textWebEditText"
            android:paddingStart="@dimen/dimens_16"
            android:paddingEnd="@dimen/dimens_16"
            android:textColorHint="@color/colorHintText"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/emailAddress"
            app:layout_constraintStart_toStartOf="@+id/emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="@dimen/dimens_120"
            android:layout_height="@dimen/dimens_35"
            android:layout_marginTop="92dp"
            android:background="@drawable/button_submit_bg"
            android:enabled="@{loading?false:true}"
            android:text="@string/submit_button"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="@{clearForm?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/projectLink"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/projectLink"
            app:layout_constraintTop_toBottomOf="@+id/projectLink" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="@{loading?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toEndOf="@+id/projectLink"
            app:layout_constraintStart_toStartOf="@+id/projectLink"
            app:layout_constraintTop_toBottomOf="@+id/projectLink" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>